Add some special screens in views login screen part 2

Add the following screens:
1. ShowErrorScreen
2. ShowSigninUI

Bug: 828058
Change-Id: Id632fd49b4e1575ad5443b5f315067bdbe08efd9
Reviewed-on: https://chromium-review.googlesource.com/1098457
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Commit-Queue: Xiaoyin Hu <xiaoyinh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567011}
Former-commit-id: df5e0b81e3af246cbc9635d9d1d8f9989ba713a0